artifacts/optimization/frankenredis-ohsk5/pass116/candidate/rch-build-candidate-2.txt
  [2m2026-06-10T05:06:32.052387Z[0m [33m WARN[0m [1;33mrch::hook[0m[33m: [33mProject path normalization failed for /tmp/frankenredis-tealotter-ohsk5-9-pass111: input resolves outside canonical root (input: /tmp/frankenredis-tealotter-ohsk5-9-pass111, detail: resolved=/tmp/frankenredis-tealotter-ohsk5-9-pass111 root=/data/projects)[0m
    [2;3mat[0m rch/src/hook.rs:2880 [2;3mon[0m ThreadId(1)

  [2m2026-06-10T05:06:32.052969Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSelected worker: vmi1227854 at root@109.123.245.77 (1 slots remaining after reservation, speed 50.0)[0m
    [2;3mat[0m rch/src/hook.rs:514 [2;3mon[0m ThreadId(1)

  [2m2026-06-10T05:06:32.104446Z[0m [33m WARN[0m [1;33mrch::hook[0m[33m: [33mRemote execution failed: Project path normalization failed for /tmp/frankenredis-tealotter-ohsk5-9-pass111: input resolves outside canonical root (input: /tmp/frankenredis-tealotter-ohsk5-9-pass111, detail: resolved=/tmp/frankenredis-tealotter-ohsk5-9-pass111 root=/data/projects), running locally[0m
    [2;3mat[0m rch/src/hook.rs:658 [2;3mon[0m ThreadId(1)

[RCH] local (remote execution failed)
   Compiling zmij v1.0.21
   Compiling serde_json v1.0.149
   Compiling typenum v1.20.0
   Compiling serde_core v1.0.228
   Compiling cfg-if v1.0.4
   Compiling memchr v2.8.0
   Compiling fr-protocol v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-protocol)
   Compiling libc v0.2.185
   Compiling proc-macro2 v1.0.106
   Compiling find-msvc-tools v0.1.9
   Compiling shlex v1.3.0
   Compiling itoa v1.0.18
   Compiling quote v1.0.45
   Compiling equivalent v1.0.2
   Compiling const-oid v0.10.2
   Compiling unicode-ident v1.0.24
   Compiling hashbrown v0.17.0
   Compiling autocfg v1.5.0
   Compiling fr-expire v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-expire)
   Compiling crc32fast v1.5.0
   Compiling cpufeatures v0.3.0
   Compiling foldhash v0.1.5
   Compiling crossbeam-utils v0.8.21
   Compiling simd-adler32 v0.3.9
   Compiling adler2 v2.0.1
   Compiling fr-config v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-config)
   Compiling minimal-lexical v0.2.1
   Compiling hex v0.4.3
   Compiling fr-eventloop v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-eventloop)
   Compiling log v0.4.29
   Compiling serde v1.0.228
   Compiling fr-repl v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-repl)
   Compiling base64 v0.21.7
   Compiling byteorder v1.5.0
   Compiling cc v1.2.60
   Compiling miniz_oxide v0.8.9
   Compiling fr-persist v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-persist)
   Compiling fr-sentinel v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-sentinel)
   Compiling num-traits v0.2.19
   Compiling nom v7.1.3
   Compiling flate2 v1.1.9
   Compiling crossbeam-channel v0.5.15
   Compiling indexmap v2.14.0
   Compiling syn v2.0.117
   Compiling hybrid-array v0.4.10
   Compiling libmimalloc-sys v0.1.46
   Compiling mio v1.2.0
   Compiling block-buffer v0.12.0
   Compiling crypto-common v0.2.1
   Compiling fr-store v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-store)
   Compiling digest v0.11.2
   Compiling sha2 v0.11.0
   Compiling hdrhistogram v7.5.4
   Compiling serde_derive v1.0.228
   Compiling fr-command v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-command)
   Compiling fr-bench v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-bench)
   Compiling mimalloc v0.1.49
   Compiling fr-runtime v0.1.0 (/tmp/frankenredis-tealotter-ohsk5-9-pass111/crates/fr-runtime)
error[E0004]: non-exhaustive patterns: `&Value::IntegerText(_)` not covered
     --> crates/fr-runtime/src/lib.rs:20113:31
      |
20113 |         let rdb_value = match value {
      |                               ^^^^^ pattern `&Value::IntegerText(_)` not covered
      |
note: `Value` defined here
     --> crates/fr-store/src/lib.rs:2045:1
      |
 2045 | pub enum Value {
      | ^^^^^^^^^^^^^^
...
 2052 |     IntegerText(SmallStr),
      |     ----------- not covered
      = note: the matched value is of type `&Value`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
      |
20217 ~             },
20218 +             &Value::IntegerText(_) => todo!()
      |

For more information about this error, try `rustc --explain E0004`.
error: could not compile `fr-runtime` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
